# phoenix-core

./: .gitignore  AUDIT_REPORT.md  CUsersLENOVODownloadsagents.json  README.md  README_EN.md  _debug_read.ts  agenthound.yaml  fix-leftover.js  fix-mcp.js  fix-paren.js  fix-runtime.js  fix_error.py  fix_q.py  fix_remaining.py  fix_workflow.py  frontend-design-proposal-v1.md  gen_header.py  generate_pdf.py  install.ps1  install.sh  launch-lostudio.bat  package-lock.json  package.json  pdf_extract.txt  pdf_report.html  playwright.config.ts  skills-lock.json  start.bat  stop.bat  test.txt
.codex/: config.toml
.next/: trace  trace-build
.playwright-mcp/: page-2026-06-08T07-55-55-231Z.yml  page-2026-06-08T07-56-50-222Z.yml  page-2026-06-08T08-30-08-455Z.yml
backend/: .dockerignore  .env.example  Dockerfile  Fswarm-idebackendskillstopology全局状态文件.txt  LOStudio深度逆向分析文档.md  README.md  check.py  design_plan_2026.json  design_plan_2026.md  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  fix_func.py  fix_func2.py  gen.py  inspect_page.py  instrumentation.ts  lighthouserc.json  mcp.json  middleware.ts  next.config.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  start-llama-server.bat  tailwind.config.js  tsconfig.json  vitest.config.ts  write_design.py  write_design2.py  x.py  全局状态文件.txt
backend/computer-use-mcp/: pyproject.toml  server.py
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
e2e/: core-flows.spec.ts  swarm-ide-performance.spec.ts
electron/: main.ts  package.json  preload.ts
evals/: metrics.md  (+2 more)
(+457 files in other folders)
