[project]
name = "computer-use-mcp"
version = "0.1.0"
description = "Windows Computer Use MCP Server for SWARM-IDE agents"
requires-python = ">=3.11"
dependencies = [
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8",
    "mcp>=1.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
